added model class sample
